fixed footer jump

--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -1,5 +1,5 @@
 .Layout {
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
     text-align: center;
     margin-top: 60px;
